style: Fix spacings

--- a/client/src/components/Modal.scss
+++ b/client/src/components/Modal.scss
@@ -45,4 +45,8 @@
 
 .modal-content {
   margin-top: 0.5rem;
+
+  button {
+    margin-top: 1rem;
+  }
 }
